--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-    <div id="card"></div>
+    <div id="card">
+        <div id="image"></div>
+    </div>
+
     
 </body>
 </html>
