--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
     <div id="card">
-        <div id="image"></div>
+        <div id="image"><img src="img/image-equilibrium.jpg" alt=""></div>
+        <div id="title"><h1>Equilibrium #3422</h1></div>
+        <div id="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
     </div>
 
     
