--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div id="image"><img src="img/image-equilibrium.jpg" alt=""></div>
         <div id="title"><h1>Equilibrium #3422</h1></div>
         <div id="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
+        <div id="priceanddate">
+            <div id="price"><img src="img/icon-ethereum.svg" alt=""> 0.041 ETH</div>
+        </div>
     </div>
 
     
