--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
         <div id="priceanddate">
             <div id="price"><img src="img/icon-ethereum.svg" alt=""> 0.041 ETH</div>
+            <div id="date"><img src="/img/icon-clock.svg" alt=""> 3 days left</div>
         </div>
     </div>
 
