--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr>
         <div id="creator">
             <div id="profilpicture"><img src="img/image-avatar.png" alt=""></div>
-            <div id="name"></div>
+            <div id="created"> Creation of <span id="name"> Jules Wyvern</span></div>
         </div>
 
     </div>
