--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
         <div id="title"><h1>Equilibrium #3422</h1></div>
         <div id="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
         <div id="priceanddate">
-            <div id="price"><img src="img/icon-ethereum.svg" alt=""> 0.041 ETH</div>
-            <div id="date"><img src="img/icon-clock.svg" alt=""> 3 days left</div>
+            <div id="price"><img src="img/icon-ethereum.svg" alt="">&nbsp; 0.041 ETH</div>
+            <div id="date"><img src="img/icon-clock.svg" alt="">&nbsp; 3 days left</div>
         </div>
         <hr>
         <div id="creator">
             <div id="profilpicture"><img src="img/image-avatar.png" alt=""></div>
             <div id="created"> Creation of <span id="name"> Jules Wyvern</span></div>
         </div>
-
     </div>
-
-    
+   
 </body>
 </html>
