--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
 
     <div id="card">
-        <div id="image"><img src="img/image-equilibrium.jpg" alt=""></div>
+        <div id="image"><img class="equi" src="img/image-equilibrium.jpg" alt="equilibrium"></div>
         <div id="title"><h1>Equilibrium #3422</h1></div>
         <div id="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
         <div id="priceanddate">
-            <div id="price"><img src="img/icon-ethereum.svg" alt="">&nbsp; 0.041 ETH</div>
-            <div id="date"><img src="img/icon-clock.svg" alt="">&nbsp; 3 days left</div>
+            <div id="price"><img src="img/icon-ethereum.svg" alt="ethereum icon">&nbsp; 0.041 ETH</div>
+            <div id="date"><img src="img/icon-clock.svg" alt="clock icon">&nbsp; 3 days left</div>
         </div>
-        <hr>
+        <div id="line"></div>
         <div id="creator">
-            <div id="profilpicture"><img src="img/image-avatar.png" alt=""></div>
+            <div id="profilpicture"><img src="img/image-avatar.png" alt="profil avatar"></div>
             <div id="created"> Creation of <span id="name"> Jules Wyvern</span></div>
         </div>
     </div>
